--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
             </div>
 
             <div class="video-wrap">
-                <video id="BgVideo" muted autoplay loop class="custom-video" poster="">
-                    <source src="video/AQPACIBRmu-QwOMrYy5Uy_C7JHos9xKUdmDYU2AXz9nC0pPQ3yAAAUtWJV5-VcHXpDmkpW1aTVhNjnARoPHAnCpMkea_AzGbee6WE-o.mp4" type="video/mp4">
+                <video id="BgVideo" muted autoplay loop playsinline class="custom-video" src="video/AQPACIBRmu-QwOMrYy5Uy_C7JHos9xKUdmDYU2AXz9nC0pPQ3yAAAUtWJV5-VcHXpDmkpW1aTVhNjnARoPHAnCpMkea_AzGbee6WE-o.mp4">
+<!--                    <source src="video/AQPACIBRmu-QwOMrYy5Uy_C7JHos9xKUdmDYU2AXz9nC0pPQ3yAAAUtWJV5-VcHXpDmkpW1aTVhNjnARoPHAnCpMkea_AzGbee6WE-o.mp4" type="video/mp4">-->
 
                     Your browser does not support the video tag.
                 </video>
